WIP API documentation

--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -82,13 +82,14 @@ is there a retrieve waive and an Adjust Waiver as well?
               <div class="toc-section">
                   <h4><a href="#loanproducts">Loan Products</a></h4>
                   <ul>
-                      <li><a href="#officeslist">List Offices</a></li>
-                      <li><a href="#officesretrieve">Retrieve an Office</a></li>
-                      <li><a href="#officestemplate">Retrieve Office Details Template</a></li>
-                      <li><a href="#officescreate">Create an Office</a></li>
-                      <li><a href="#officesupdate">Update an Office</a></li>
+                      <li><a href="#loanproductslist">List Loan Products</a></li>
+                      <li><a href="#loanproductsretrieve">Retrieve a Loan Product</a></li>
+                      <li><a href="#loanproductstemplate">Retrieve Loan Product Details Template</a></li>
+                      <li><a href="#loanproductscreate">Create a Loan Product</a></li>
+                      <li><a href="#loanproductsupdate">Update a Loan Product</a></li>
                   </ul>
               </div>
+
               <div class="toc-section">
                   <h4><a href="#additionalfields">Additional Fields</a></h4>
                   <ul>
